--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
   <div class="container">
     <div class="nav">
-      <div class="nav-logo">OZARKS</div>
+      <div class="nav-logo">GRIVES</div>
        <div class="nav-links">
-        <div class="nav-link">Lawyer</div>
-        <div class="nav-link">Hit man</div>
-        <div class="nav-link">Businesses</div>
-        <div class="nav-link">OffShore Account</div>
+        <div class="nav-link">Sign Up</div>
+        <div class="nav-link">Log In</div>
+        <div class="nav-link">Contact Us/div>
+        <div class="nav-link">Setting</div>
         <div class="nav-link btn">Get started</div>
        </div>
     </div>
