--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        <div class="nav-links">
         <div class="nav-link">Sign Up</div>
         <div class="nav-link">Log In</div>
-        <div class="nav-link">Contact Us/div>
+        <div class="nav-link">Contact Us</div>
         <div class="nav-link">Setting</div>
         <div class="nav-link btn">Get started</div>
        </div>
